js/src/tests/test262/built-ins/Promise/reject/name.js
verifyProperty
(
Promise
.
reject
"
name
"
{
value
:
"
reject
"
writable
:
false
enumerable
:
false
configurable
:
true
}
)
;
reportCompare
(
0
0
)
;
